Added in custom template tags

--- a/templates/base/home/index.html
+++ b/templates/base/home/index.html
@@ -1,5 +1,6 @@
 {% extends "base/home/base.html" %}
 {% load static %}
+{% block title %}Home{% endblock %}
 {% block content %}
 {% comment %} <div class="w-full h-screen flex flex-col items-center justify-center"> {% endcomment %}
 <div class="w-full h-svh min-w-[400px]">
