--- a/templates/base/home/base.html
+++ b/templates/base/home/base.html
@@ -1,12 +1,13 @@
 {% load static tailwind_tags %}
+{% load custom_tags %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    {% tailwind_css  %}
+    {% tailwind_css  %}    
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>{% block title %}{% endblock %} | {{ 'NAME'|get_setting }}</title>
 </head>
 <body>
     {% block content %}
