--- a/templates/base/home/base.html
+++ b/templates/base/home/base.html
@@ -3,13 +3,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    {% tailwind_css  %}    
+    {% tailwind_css  %}
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}{% endblock %} | {{ 'NAME'|get_setting }}</title>
 </head>
 <body>
+    {% include 'fragments/navbar.html' %}
     {% block content %}
     {% endblock %}
 </body>
