--- a/templates/base/home/index.html
+++ b/templates/base/home/index.html
@@ -2,11 +2,22 @@
 {% load static %}
 {% block title %}Home{% endblock %}
 {% block content %}
-{% comment %} <div class="w-full h-screen flex flex-col items-center justify-center"> {% endcomment %}
-<div class="w-full h-svh min-w-[400px]">
-    <div class="w-1/2 h-[100%] bg-blue-500 p-10">
-        <h1 class="text-white">Hello World</h1>
-        <img src="{% static "img/20230623_014051.jpg" %}"/>
+
+<div class="w-full h-screen bg-red-500">
+    <div class="m-auto h-2/3">
+        <img class="object-cover h-full w-full" src={% static "img/20230623_014051.jpg" %} alt="Home" />
     </div>
+    <div class="m-auto h-full p-4 bg-gray-100">
+        <h1 class="border-b border-gray-200 text-center text-2xl font-bold">Welcome to Zolv</h1>
+        <p class="text-center">
+            Zolv is a web application for managing your Zoho Invoices.
+        <p class="pl-24 pr-24">Hello World</p>
+    </div>
+</div>
+<div class="w-full h-screen bg-sky-500">
+</div>
+<div class="w-full h-screen bg-green-500">
+</div>
+<div class="w-full h-screen bg-slate-500">
 </div>
 {% endblock %}
