Changed webpages, made them more modular

--- a/templates/base/contact/index.html
+++ b/templates/base/contact/index.html
@@ -1,6 +1,6 @@
 {% extends "base/home/base.html" %}
 {% load static %}
-{% block title %}{{page_title}}{% endblock %}
+{% block title %}Contact{% endblock %}
 {% block content %}
 
 <div class="w-full h-screen bg-red-500">
