--- a/templates/base/home/index.html
+++ b/templates/base/home/index.html
@@ -3,7 +3,7 @@
 {% block title %}{{page_title}}{% endblock %}
 {% block content %}
 
-<div class="w-full h-screen bg-red-500">
+<div class="w-full h-screen">
     <div class="m-auto h-2/3">
         <img class="object-cover h-full w-full" src={% static "img/20230623_014051.jpg" %} alt="Home" />
     </div>
