--- a/templates/base/about/index.html
+++ b/templates/base/about/index.html
@@ -1,8 +1,7 @@
 {% extends "base/home/base.html" %}
 {% load static %}
-{% block title %}About{% endblock %}
+{% block title %}{{page_title}}{% endblock %}
 {% block content %}
-
 <div class="w-full h-screen bg-red-500">
     <div class="m-auto h-full p-4 bg-gray-100">
         <h1 class="border-b border-gray-200 text-center text-2xl font-bold">Welcome to Zolv</h1>
