--- a/templates/base/pricing/index.html
+++ b/templates/base/pricing/index.html
@@ -2,13 +2,17 @@
 {% load static %}
 {% block title %}{{page_title}}{% endblock %}
 {% block content %}
-
 <div class="w-full h-screen bg-red-500">
-    <div class="m-auto h-full p-4 bg-gray-100">
-        <h1 class="border-b border-gray-200 text-center text-2xl font-bold">Pricing</h1>
-        <p class="text-center">
-            Zolv is a web application for managing your Zoho Invoices.
-        <p class="pl-24 pr-24">Hello World</p>
+    <div class="m-auto h-full p-12 bg-gray-100 grid grid-cols-3 grid-rows-1 gap-12">
+        <div class="col-span-1 bg-sky-200 rounded-2xl shadow-xl">
+            <h1 class="text-xl md:text-3xl text-center border-b border-sky-300 pb-2 font-bold">Hello World</h1>
+        </div>
+        <div class="col-span-1 bg-sky-200 rounded-2xl shadow-xl">
+            <h1 class="text-xl md:text-3xl text-center border-b border-sky-300 pb-2 font-bold">Hello World</h1>
+        </div>
+        <div class="col-span-1 bg-sky-200 rounded-2xl shadow-xl">
+            <h1 class="text-xl md:text-3xl text-center border-b border-sky-300 pb-2 font-bold">Hello World</h1>
+        </div>
     </div>
 </div>
 {% endblock %}
