--- a/templates/base/home/index.html
+++ b/templates/base/home/index.html
@@ -1,16 +1,25 @@
 {% extends "base/home/base.html" %}
 {% load static %}
+{% load custom_tags%}
 {% block title %}{{page_title}}{% endblock %}
 {% block content %}
-
 <div class="w-full h-screen">
-    <div class="m-auto h-2/3">
+    <div class="m-auto h-2/3 relative">
         <img class="object-cover h-full w-full" src={% static "img/20230623_014051.jpg" %} alt="Home" />
+        <div class="absolute flex justify-center items-center z-10 inset-0 z-10 max-h-1/3 p-24 text-center bg-gray-500 ease-in-out duration-700 hover:opacity-100 opacity-0">
+            <div class="inset-0 justify-center items-center z-10">
+                <h1 class="p-4 text-5xl font-bold text-white">Pyrl</h1>
+                <p class="pb-2 text-2xl text-white">Business software for managing your Zoho Invoices.</p>
+                <div class="items-center justify-center flex">
+                    <a href="/pricing" class="text-2xl bg-gray-100 shadow-inner focus:text-black focus:bg-gray-300 focus:shadow-inner hover:shadow-2xl p-4 ease-in-out duration-300 hover:bg-gray-700 hover:text-white">Get Started</a>
+                </div>
+            </div>
+        </div>
     </div>
     <div class="m-auto h-full p-4 bg-gray-100">
-        <h1 class="border-b border-gray-200 text-center text-2xl font-bold">Welcome to Zolv</h1>
+        <h1 class="border-b border-gray-200 text-center text-2xl font-bold">Welcome to {{'NAME'|get_setting}}</h1>
         <p class="text-center">
-            Zolv is a web application for managing your Zoho Invoices.
+            {{'NAME'|get_setting}} is a web application for managing your Zoho Invoices.
         <p class="pl-24 pr-24">Hello World</p>
     </div>
 </div>
