Added in new pages, honed in on design for homepage

--- a/templates/base/pricing/index.html
+++ b/templates/base/pricing/index.html
@@ -4,7 +4,7 @@
 {% block content %}
 <div class="w-full h-screen bg-gray-100 dark:bg-gray-900">
     <div class="w-full flex flex-wrap items-center justify-between mx-4 p-4 h-[10%]">
-        <a href={% url 'index' %} class="flex items-center space-x-3 rtl:space-x-reverse">
+        <a href={% url 'base:index' %} class="flex items-center space-x-3 rtl:space-x-reverse">
             <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white text-gray-400 ease-in-out duration-700 hover:text-gray-700">Zolv...</span>
         </a>
     </div>
