--- a/templates/base/home/base.html
+++ b/templates/base/home/base.html
@@ -13,5 +13,6 @@
     {% include 'fragments/navbar.html' %}
     {% block content %}
     {% endblock %}
+    {% include 'fragments/footer.html' %}
 </body>
 </html>
