Added to the pricing pages

--- a/templates/base/pricing/index.html
+++ b/templates/base/pricing/index.html
@@ -8,12 +8,8 @@
             <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white text-gray-400 ease-in-out duration-700 hover:text-gray-700">Go back...</span>
         </a>
     </div>
-      
-    {% comment %} <div class="w-full h-[10%] bg-gray-100 flex">
-            <a href="#" class="bg-gray-300">- Go back"</a>
-    </div> {% endcomment %}
 
-    <div class="m-auto h-[90%] p-12 pt-0 grid grid-cols-3 grid-rows-1 gap-12">
+    <div class="m-auto h-[90%] p-12 pt-0 grid  md:xl:grid-cols-3 md:xl:grid-rows-1 sm:grid-cols-1 sm:grid-rows-3 gap-12">
         <div class="col-span-1 bg-sky-200 rounded-2xl shadow-xl p-2">
             <h1 class="text-xl md:text-3xl text-center border-b border-sky-300 pb-2 font-bold">Standard</h1>
         </div>
