Changed index-home page

--- a/templates/base/home/index.html
+++ b/templates/base/home/index.html
@@ -21,14 +21,14 @@
     </div>
 </div>
 <div class="m-auto min-h-full max-h-fit p-4 bg-gray-100 mb-4">
-    <h1 class="border-b border-gray-200 text-center text-2xl font-bold">Welcome to {{'NAME'|get_setting}}</h1>
+    <h1 class="border-b border-gray-200 text-center text-2xl font-bold pb-2">Welcome to {{'NAME'|get_setting}}</h1>
     <p class="text-center">{{'NAME'|get_setting}} combines the power of all mainstream communciation networks, with the flexibility of a self-hosted solution.</p>
     <p class="text-center">Client record management takes valuable time away from your customer success personnel, let us handle it.</p>
     <p class="text-center">Freeing up your time to focus on what matters most,</p>
-    <p class="sm:hidden text-center pb-4">All your needs, all your clients, all your network, secure and readily available.</p>
-    <p class="sm:hidden text-center pb-4">Let {{'NAME'|get_setting}} handle it for you.</p>
+    <p class="text-center">All your needs, all your clients, all your network, secure and readily available.</p>
+    <p class="text-center pb-2">Let {{'NAME'|get_setting}} handle it for you.</p>
     <div class="items-center justify-center flex">
-        <a href="/pricing" class="text-lg bg-gray-100 shadow-inner focus:text-black focus:bg-gray-300 focus:shadow-inner hover:shadow-2xl p-2 ease-in-out duration-300 hover:bg-gray-700 hover:text-white">Get Started</a>
+        <a href="/pricing" class="text-lg bg-gray-300 shadow-inner focus:text-black focus:bg-gray-500 focus:text-white focus:shadow-inner hover:shadow-2xl p-2 ease-in-out duration-300 hover:bg-gray-700 hover:text-white">Get Started</a>
     </div>
 </div>
 <h1 class="text-center text-5xl font-bold pb-4">Our core tenets</h1>
