--- a/templates/base/home/index.html
+++ b/templates/base/home/index.html
@@ -6,7 +6,7 @@
 <div class="w-full">
     <div class="m-auto h-[400px] relative">
         <img class="object-cover h-full w-full" src={% static "img/typing.gif" %} alt="Home" />
-        <div class="absolute flex justify-center items-center z-10 inset-0 z-10 max-h-1/3 p-4 text-center bg-gray-500 ease-in-out duration-700 hover:opacity-100 opacity-0">
+        <div class="absolute flex justify-center items-center z-10 inset-0 z-10 max-h-1/3 p-4 text-center bg-gray-500 ease-in-out duration-700 hover:opacity-100 opacity-0 focus:opacity-100">
             <div class="inset-0 justify-center items-center z-10 align-content-center">
                 <div class="flex justify-center p-4">
                     {{'white'|get_pyrl_logo}}
