--- a/templates/fragments/navbar.html
+++ b/templates/fragments/navbar.html
@@ -1,4 +1,4 @@
-<nav class="bg-gray-100 border-gray-200 dark:bg-gray-900">
+<nav class="bg-white border-gray-200 dark:bg-gray-900">
   <div class="max-w-screen-xl flex items-center justify-between mx-auto p-4">
     <a class="mr-2 ml-2" href={% url 'base:index' %}>
       <svg class="w-10 opacity-100 fill-current text-gray-500 hover:fill-current ease-in-out duration-300 hover:text-black drop-shadow-2xl w-30 h-30" id="Layer_1" viewBox="60 70 630 210">
