--- a/templates/base/home/base.html
+++ b/templates/base/home/base.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}{% endblock %} | {{ 'NAME'|get_setting }}</title>
 </head>
-<body class="bg-gray-100">
+<body class="bg-gray-100 dark:bg-gray-800 text-black dark:text-white">
     {% include 'fragments/navbar.html' %}
     {% block content %}
     {% endblock %}
