--- a/templates/base/home/index.html
+++ b/templates/base/home/index.html
@@ -6,30 +6,27 @@
 <div class="w-full">
     <div class="m-auto h-[400px] relative">
         <img class="object-cover h-full w-full" src={% static "img/typing.gif" %} alt="Home" />
-        <div class="absolute flex justify-center items-center z-10 inset-0 z-10 max-h-1/3 p-4 text-center bg-gray-500 ease-in-out duration-700 hover:opacity-100 opacity-0 focus:opacity-100">
-            <div class="inset-0 justify-center items-center z-10 align-content-center">
+        <div class="absolute flex justify-center items-center z-10 inset-0 z-10 max-h-1/3 p-4 text-center bg-gray-300 dark:bg-gray-700 ease-in-out duration-700 hover:opacity-100 opacity-0 focus:opacity-100">
+            <div class="inset-0 justify-center items-center z-10 align-content-center text-lg">
                 <div class="flex justify-center p-4">
-                    {{'white'|get_pyrl_logo}}
+                    {{'text-black dark:text-white'|get_pyrl_logo}}
                 </div>
-                <p class="pb-2 text-lg text-white">For you, your clients, and your business needs.</p>
-                <p class="pb-2 text-lg text-white">Client management, open communication, securely, in one place.</p>
+                <p class="pb-2">For you, your clients, and your business needs.</p>
+                <p class="pb-2">Client management, open communication, securely, in one place.</p>
                 <div class="items-center justify-center flex">
-                    <a href="/pricing" class="text-lg bg-gray-100 shadow-inner focus:text-black focus:bg-gray-300 focus:shadow-inner hover:shadow-2xl p-2 ease-in-out duration-300 hover:bg-gray-700 hover:text-white">Get Started</a>
+                    <a href="/pricing" class="text-lg bg-gray-100 dark:bg-gray-900 dark:hover:text-black dark:hover:bg-gray-100 focus:shadow-inner hover:shadow-2xl p-2 ease-in-out duration-300 hover:bg-gray-700 hover:text-white">Get Started</a>
                 </div>
             </div>
         </div>
     </div>
 </div>
-<div class="m-auto min-h-full max-h-fit p-4 bg-gray-100 mb-4">
-    <h1 class="border-b border-gray-200 text-center text-2xl font-bold pb-2">Welcome to {{'NAME'|get_setting}}</h1>
+<div class="m-auto min-h-full max-h-fit p-4 mb-4">
+    <h1 class="border-b border-gray-200 dark:border-gray-700 text-center text-2xl font-bold pb-2">Welcome to {{'NAME'|get_setting}}</h1>
     <p class="text-center">{{'NAME'|get_setting}} combines the power of all mainstream communciation networks, with the flexibility of a self-hosted solution.</p>
     <p class="text-center">Client record management takes valuable time away from your customer success personnel, let us handle it.</p>
     <p class="text-center">Freeing up your time to focus on what matters most,</p>
     <p class="text-center">All your needs, all your clients, all your network, secure and readily available.</p>
     <p class="text-center pb-2">Let {{'NAME'|get_setting}} handle it for you.</p>
-    <div class="items-center justify-center flex">
-        <a href="/pricing" class="text-lg bg-gray-300 shadow-inner focus:text-black focus:bg-gray-500 focus:text-white focus:shadow-inner hover:shadow-2xl p-2 ease-in-out duration-300 hover:bg-gray-700 hover:text-white">Get Started</a>
-    </div>
 </div>
 <h1 class="text-center text-5xl font-bold pb-4">Our core tenets</h1>
 <div class="m-auto h-[90%] p-12 pt-0 flex grid md:xl:grid-cols-3 md:xl:grid-rows-1 gap-6 sm:grid-cols-1 sm:grid-rows-3">
