front page changes

--- a/templates/base/about/index.html
+++ b/templates/base/about/index.html
@@ -2,9 +2,9 @@
 {% load static %}
 {% block title %}{{page_title}}{% endblock %}
 {% block content %}
-<div class="w-full h-screen bg-red-500">
-    <div class="m-auto h-full p-4 bg-gray-100">
-        <h1 class="border-b border-gray-200 text-center text-2xl font-bold">Welcome to Zolv</h1>
+<div class="w-full h-screen">
+    <div class="m-auto h-full p-4">
+        <h1 class="border-b border-gray-200 dark:border-gray-800 text-center text-2xl font-bold">Welcome to Zolv</h1>
         <p class="text-center">
             Zolv is a web application for managing your Zoho Invoices.
         <p class="pl-24 pr-24">Hello World</p>
