--- a/templates/fragments/footer.html
+++ b/templates/fragments/footer.html
@@ -15,7 +15,7 @@
                           <a href="#" class="hover:underline">Pyrl</a>
                       </li>
                       <li>
-                          <a href="#" class="hover:underline">Pricing</a>
+                          <a href={% url 'base:pricing' %} class="hover:underline">Pricing</a>
                       </li>
                   </ul>
               </div>
