--- a/templates/base/home/base.html
+++ b/templates/base/home/base.html
@@ -1,12 +1,15 @@
 {% load static tailwind_tags %}
+{% load static %}
 {% load custom_tags %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     {% tailwind_css  %}
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <link type="css" rel="stylesheet" href="/static/css/dist/styles.css"/>
     <title>{% block title %}{% endblock %} | {{ 'NAME'|get_setting }}</title>
 </head>
 <body class="bg-gray-100 dark:bg-gray-800 text-black dark:text-white">
