Changed pages such as pricing, contact, and added in a new navbar, new navbar has js for its opening and closing on mobile, page is now navigatable on mobile.

--- a/templates/base/contact/index.html
+++ b/templates/base/contact/index.html
@@ -1,20 +1,13 @@
+{% extends "base/home/base.html" %}
+{% load static %}
 {% load custom_tags%}
-<html>
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
-  <script src="https://cdn.tailwindcss.com"></script>
-  
-  <title>{% block title %}Contact us{% endblock%} | Pyrl</title>
-</head>
-<body> 
-  {% comment %} #29183C {% endcomment %}
-<div class="relative flex min-h-screen flex-col justify-center overflow-hidden bg-gray-200 dark:bg-gray-800 pt-6 sm:pt-12">
+{% block title %}{{page_title}}{% endblock %}
+{% block content %}
+<div class="relative flex min-h-screen flex-col justify-center overflow-hidden pt-6 sm:pt-12">
     <div class="relative bg-white px-6 pt-10 pb-8 shadow-2xl ring-1 ring-gray-900/5 sm:mx-auto sm:max-w-lg sm:rounded-lg dark:bg-gray-700 sm:px-10 mb-12">
       <div class="mx-auto max-w-md">
           <a class="justify-content-center grid grid-cols-1 place-items-center" href={% url 'base:index' %}>
-            {{'text-black dark:text-white'|get_pyrl_logo}}
+            {{'fill-current hover:text-gray-500 ease-in-out duration-300 dark:text-white text-dark'|get_pyrl_logo}}
           </a>
         <div class="divide-y divide-gray-300/50">
           <div class="space-y-6 py-8 text-base leading-7 dark:text-white text-black">
@@ -125,7 +118,6 @@
                 data-te-ripple-init
                 data-te-ripple-color="light"
                 class="bg-purple-300 mb-2 inline-block rounded px-6 py-2.5 text-xs font-medium uppercase leading-normal text-white shadow-2xl transition duration-150 ease-in-out hover:shadow-xl focus:shadow-lg focus:outline-none focus:ring-0 active:shadow-inner active:bg-purple-700 focus:bg-purple-500 hover:bg-purple-500">
-                {% comment %} style="background-color: #ea4335"> {% endcomment %}
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
                     class="h-4 w-4"
@@ -135,35 +127,11 @@
                     <path opacity="1.000000" stroke="none" d=" M160.043228,87.935410   C180.360657,96.271416 190.804901,111.613968 194.054291,132.562607   C196.232727,146.606781 195.251602,160.306015 188.872543,173.007660   C179.808243,191.056076 164.284225,200.714615 144.714401,203.890778   C136.151825,205.280487 127.417229,205.610367 118.345848,206.460373   C118.345848,194.017670 118.345848,182.435410 118.345848,169.999557   C121.990036,169.999557 125.742027,170.142532 129.479324,169.968964   C136.658524,169.635574 143.609116,168.112961 149.134735,163.261734   C156.701035,156.618866 158.290298,147.684387 156.582397,138.355621   C153.644623,122.309067 145.297348,119.817398 132.045380,118.272598   C121.393898,117.030937 110.482224,118.021370 99.231888,118.021370   C99.231888,169.315445 99.231888,220.213257 99.231888,271.554871   C86.420166,271.554871 74.056221,271.554871 61.343616,271.554871   C61.343616,208.565674 61.343616,145.556122 61.343616,82.000114   C63.343872,82.000114 65.128952,82.000114 66.914032,82.000114   C85.070488,82.000076 103.243416,81.533066 121.377304,82.172836   C132.489151,82.564865 143.548248,84.599098 154.612595,86.037720   C156.343842,86.262825 157.976700,87.244850 160.043228,87.935410  z"/>
                     <path opacity="1.000000" stroke="none" d=" M305.750763,118.772980   C312.702179,107.213837 319.360291,95.901443 326.171265,84.681808   C326.882751,83.509697 328.488403,82.139389 329.696228,82.123100   C343.155762,81.941566 356.618683,82.008598 371.158447,82.008598   C368.120209,87.014809 365.540741,91.316978 362.911652,95.588608   C348.294312,119.338234 333.666290,143.081299 319.038513,166.824493   C315.683990,172.269409 312.007355,177.546173 309.074432,183.208725   C307.421814,186.399445 306.168915,190.211121 306.131653,193.757736   C305.879364,217.744354 306.000000,241.734879 305.999969,265.724152   C305.999969,267.543518 305.999969,269.362854 305.999969,271.589172   C293.351196,271.589172 280.986267,271.589172 268.000092,271.589172   C268.000092,269.737640 268.000061,267.961639 268.000061,266.185638   C268.000031,242.362961 267.859375,218.538742 268.119598,194.718918   C268.171173,189.998718 266.975830,186.051132 264.612244,182.218857   C245.150223,150.663345 225.683182,119.110947 206.244858,87.540855   C205.311050,86.024284 204.632462,84.350563 203.461334,82.000008   C205.722549,82.000008 207.613708,81.999977 209.504852,82.000008   C220.333344,82.000214 231.166321,81.840164 241.986359,82.142540   C244.029327,82.199631 246.884323,83.565445 247.904556,85.224983   C260.104218,105.069534 272.022797,125.086784 284.028809,145.050522   C285.979889,148.294815 287.960419,148.432129 289.889496,145.254395   C295.166077,136.562469 300.306763,127.788063 305.750763,118.772980  z"/>
                     <path opacity="1.000000" stroke="none" d=" M571.984558,94.166656   C583.025757,90.776901 594.067017,87.387138 605.821472,83.986206   C606.967590,83.983612 607.400513,83.992180 607.833374,84.000748   C607.888916,108.476799 607.965759,132.952820 607.993896,157.428909   C608.021667,181.574966 608.000061,205.721069 608.000061,229.867157   C608.000061,231.671661 608.000061,233.476166 608.000061,236.039047   C636.288452,236.039047 664.192444,236.039047 692.691467,236.244537   C693.461548,236.635544 693.643799,236.813644 693.833374,236.984314   C693.875916,248.021683 693.918457,259.059052 693.755493,270.691498   C693.364441,271.461639 693.186279,271.643890 693.015503,271.833344   C652.978210,271.875885 612.940918,271.918427 572.308472,271.755432   C571.538269,271.364410 571.356018,271.186249 571.166626,271.015411   C571.111084,256.549744 571.011414,242.084061 571.008179,227.618362   C570.998413,183.713364 571.026001,139.808365 571.244507,95.308334   C571.635620,94.538300 571.813782,94.356087 571.984558,94.166656  z"/>
-                    {% comment %} <path
-                      d="M7 11v2.4h3.97c-.16 1.029-1.2 3.02-3.97 3.02-2.39 0-4.34-1.979-4.34-4.42 0-2.44 1.95-4.42 4.34-4.42 1.36 0 2.27.58 2.79 1.08l1.9-1.83c-1.22-1.14-2.8-1.83-4.69-1.83-3.87 0-7 3.13-7 7s3.13 7 7 7c4.04 0 6.721-2.84 6.721-6.84 0-.46-.051-.81-.111-1.16h-6.61zm0 0 17 2h-3v3h-2v-3h-3v-2h3v-3h2v3h3v2z"
-                      fill-rule="evenodd"
-                      clip-rule="evenodd" /> {% endcomment %}
                   </svg>
               </button>
-              <!-- Google -->
-              {% comment %} <button
-              type="button"
-              data-te-ripple-init
-              data-te-ripple-color="light"
-              class="mb-2 inline-block rounded px-6 py-2.5 text-xs font-medium uppercase leading-normal text-white shadow-md transition duration-150 ease-in-out hover:shadow-lg focus:shadow-lg focus:outline-none focus:ring-0 active:shadow-lg"
-              style="background-color: #ea4335">
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  class="h-4 w-4"
-                  fill="currentColor"
-                  viewBox="0 0 24 24">
-                  <path
-                    d="M7 11v2.4h3.97c-.16 1.029-1.2 3.02-3.97 3.02-2.39 0-4.34-1.979-4.34-4.42 0-2.44 1.95-4.42 4.34-4.42 1.36 0 2.27.58 2.79 1.08l1.9-1.83c-1.22-1.14-2.8-1.83-4.69-1.83-3.87 0-7 3.13-7 7s3.13 7 7 7c4.04 0 6.721-2.84 6.721-6.84 0-.46-.051-.81-.111-1.16h-6.61zm0 0 17 2h-3v3h-2v-3h-3v-2h3v-3h2v3h3v2z"
-                    fill-rule="evenodd"
-                    clip-rule="evenodd" />
-                </svg>
-              </button> {% endcomment %}
           </div>
         </div>
       </div>
     </div>
   </div>
-{% include 'fragments/footer.html'%}
-</body>
-</html>
+{% endblock %}
