--- a/templates/base/home/base.html
+++ b/templates/base/home/base.html
@@ -10,12 +10,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link type="css" rel="stylesheet" href="/static/css/dist/styles.css"/>
+    <link href={% static 'css/dist/styles.css' %}/>
     <title>{% block title %}{% endblock %} | {{ 'NAME'|get_setting }}</title>
 </head>
 <body class="bg-gray-100 dark:bg-gray-800 text-black dark:text-white">
-    {% include 'fragments/navbar.html' %}
+    {% include 'fragments/navbar2.html' %}
     {% block content %}
     {% endblock %}
     {% include 'fragments/footer.html' %}
 </body>
-</html>
+</html> 
