--- a/templates/base/home/index.html
+++ b/templates/base/home/index.html
@@ -2,6 +2,10 @@
 {% load static %}
 {% load custom_tags%}
 {% block title %}{{page_title}}{% endblock %}
+{% block nav_home_active %}{{ True |active_navbar }}{% endblock %}
+{% block nav_about_active %}{{ True |active_navbar }}{% endblock %}
+{% block nav_pricing_active %}{{ True |active_navbar }}{% endblock %}
+{% block nav_contact_active %}{{ True |active_navbar }}{% endblock %}
 {% block content %}
 <div class="w-full">
     <div class="m-auto h-[400px] relative">
