--- a/templates/fragments/footer.html
+++ b/templates/fragments/footer.html
@@ -4,7 +4,7 @@
         <div class="md:flex md:justify-between">
           <div class="mb-6 md:mb-0">
               <a href={% url 'base:index' %} class="flex items-center">
-                    {{'dark:text-white text-black'|get_pyrl_logo}}
+                    {{'fill-current hover:text-gray-500 ease-in-out duration-300 dark:text-white text-dark'|get_pyrl_logo}}
               </a>
           </div>
           <div class="grid grid-cols-2 gap-8 sm:gap-6 sm:grid-cols-3">
