Added in user models to test

--- a/templates/base/home/base.html
+++ b/templates/base/home/base.html
@@ -14,7 +14,7 @@
     <title>{% block title %}{% endblock %} | {{ 'NAME'|get_setting }}</title>
 </head>
 <body class="bg-gray-100 dark:bg-gray-800 text-black dark:text-white">
-    {% include 'fragments/navbar2.html' %}
+    {% include 'fragments/navbar.html' %}
     {% block content %}
     {% endblock %}
     {% include 'fragments/footer.html' %}
