--- a/templates/base/home/index.html
+++ b/templates/base/home/index.html
@@ -1,6 +1,7 @@
 {% extends "base/home/base.html" %}
 {% load static %}
 {% load custom_tags%}
+{% block test %}<p>WWWWOWOWOOWO</p>{% endblock %}
 {% block title %}{{page_title}}{% endblock %}
 {% block nav_home_active %}{{ True |active_navbar }}{% endblock %}
 {% block nav_about_active %}{{ True |active_navbar }}{% endblock %}
@@ -32,7 +33,7 @@
     <p class="text-center">All your needs, all your clients, all your network, secure and readily available.</p>
     <p class="text-center pb-2">Let {{'NAME'|get_setting}} handle it for you.</p>
 </div>
-<h1 class="text-center text-5xl font-bold pb-4">Our core tenets</h1>
+<h1 class="text-4xl text-center md:xl:text-5xl font-bold pb-4">Our core tenets</h1>
 <div class="m-auto h-[90%] p-12 pt-0 flex grid md:xl:grid-cols-3 md:xl:grid-rows-1 gap-6 sm:grid-cols-1 sm:grid-rows-3">
     <div class="col-span-1 p-2">
         <h1 class="text-xl md:text-3xl text-center border-b border-gray-500 pb-2 font-bold">Reliability</h1>
