--- a/templates/fragments/navbar.html
+++ b/templates/fragments/navbar.html
@@ -4,16 +4,16 @@
     <a class="mr-2 ml-2" href={% url 'base:index' %}>
       {{'fill-current hover:text-gray-500 ease-in-out duration-300 dark:text-white text-dark'|get_pyrl_logo}}
     </a>
-    <button data-collapse-toggle="navbar-default" type="button" class="flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="navbar-default" aria-expanded="false">
+    <button data-collapse-toggle="navbar-default" onClick="myFunction()" type="button" class="flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="navbar-default" aria-expanded="false">
         <span class="sr-only">Open main menu</span>
         <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 17 14">
             <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 1h15M1 7h15M1 13h15"/>
         </svg>
     </button>
-    <div class="hidden w-full md:block md:w-auto" id="navbar-default">
+    <div class="hidden w-full md:block md:w-auto">
       <ul class="font-medium flex flex-col p-4 md:p-0 mt-4 border border-gray-100 md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0 dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
         <li>
-          <a href={% url 'base:index' %} class="block py-2 px-3 text-gray-500 bg-gray-700 rounded md:bg-transparent md:text-gray-700 md:p-0 dark:text-white md:dark:text-gray-500" aria-current="page">Home</a>
+          <a href={% url 'base:index' %} class="" aria-current="page">Home</a>
         </li>
         <li>
           <a href={% url 'base:about' %} class="block py-2 px-3 text-gray-500 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-black md:p-0 dark:text-white md:dark:hover:text-black dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">About</a>
@@ -27,4 +27,46 @@
       </ul>
     </div>
   </div>
+  <div class="md:xl:hidden hidden w-full md:block md:w-auto" id="navbar-default">
+    <ul class="font-medium flex flex-col p-4 md:p-0 mt-4 border border-gray-100 md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0 dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
+      <li>
+        <a href={% url 'base:index' %} {% if request.resolver_match.url_name == 'index' %}class="test active"{% else %}class="test inactive"{% endif %} aria-current="page">Home</a>
+      </li>
+      <li>
+        <a href={% url 'base:about' %} {% if request.resolver_match.url_name == 'about' %}class="test active"{% else %}class="test inactive"{% endif %}>About</a>
+      </li>
+      <li>
+        <a href={% url 'base:pricing' %} {% if request.resolver_match.url_name == 'pricing' %}class="test active"{% else %}class="test inactive"{% endif %}>Pricing</a>
+      </li>
+      <li>
+        <a href={% url 'base:contact' %} {% if request.resolver_match.url_name == 'contact' %}class="test active"{% else %}class="test inactive"{% endif %}>Contact</a>
+      </li>
+    </ul>
+  </div>
 </nav>
+
+<script>
+    function myFunction() {
+        var x = document.getElementById("navbar-default");
+        if (x.style.display === "block") {
+          x.style.display = "none";
+        } else {
+          x.style.display = "block";
+        }
+      }
+
+    const active_class = "block py-2 px-3 text-gray-500 bg-gray-700 rounded md:bg-transparent md:text-gray-700 md:p-0 dark:text-white md:dark:text-gray-500";
+    const inactive_class = "block py-2 px-3 text-gray-500 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-black md:p-0 dark:text-white md:dark:hover:text-black dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent";
+
+    for (var j = 0; j < 2; j++) {
+      var inactive_elements = document.getElementsByClassName("inactive");
+      for (var i = 0; i < inactive_elements.length; i++) {
+        inactive_elements[i].className = inactive_class;
+      }
+    }
+
+    var active_element = document.getElementsByClassName("active");
+    for (var i = 0; i < active_element.length; i++) {
+      active_element[i].className = active_class;
+    }
+</script>
