Added user models, company models and a test signup form

--- a/templates/base/contact/index.html
+++ b/templates/base/contact/index.html
@@ -33,7 +33,7 @@
           </div>
           <div class="pt-8 text-base font-semibold leading-7">
             <p class="text-black pb-4 dark:text-white" style="text-align:center">Want to get in touch?</p>
-            <div class="grid grid-cols-6 place-items-center">
+            <div class="grid md:xl:grid-cols-6 grid-cols-3 grid-rows-2 md:xl:grid-rows-1 place-items-center">
               <!--LinkedIn-->
               <button
                 onclick="location.href='http://www.google.com'"
