--- a/templates/fragments/navbar.html
+++ b/templates/fragments/navbar.html
@@ -24,11 +24,14 @@
         <li>
           <a href={% url 'base:contact' %} class="block py-2 px-3 text-gray-500 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-black md:p-0 dark:text-white md:dark:hover:text-black dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Contact</a>
         </li>
+        <li>
+          <a href={% url 'base:form' %} class="block py-2 px-3 text-gray-500 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-black md:p-0 dark:text-white md:dark:hover:text-black dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Form</a>
+        </li>
       </ul>
     </div>
   </div>
   <div class="md:xl:hidden hidden w-full md:block md:w-auto" id="navbar-default">
-    <ul class="font-medium flex flex-col p-4 md:p-0 mt-4 border border-gray-100 md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0 dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
+    <ul class="font-medium md:xl:hidden flex flex-col p-1 md:p-0 border border-gray-100 md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0 dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
       <li>
         <a href={% url 'base:index' %} {% if request.resolver_match.url_name == 'index' %}class="test active"{% else %}class="test inactive"{% endif %} aria-current="page">Home</a>
       </li>
@@ -40,6 +43,9 @@
       </li>
       <li>
         <a href={% url 'base:contact' %} {% if request.resolver_match.url_name == 'contact' %}class="test active"{% else %}class="test inactive"{% endif %}>Contact</a>
+      </li>
+      <li>
+        <a href={% url 'base:form' %} {% if request.resolver_match.url_name == 'form' %}class="test active"{% else %}class="test inactive"{% endif %}>Form</a>
       </li>
     </ul>
   </div>
@@ -58,15 +64,19 @@
     const active_class = "block py-2 px-3 text-gray-500 bg-gray-700 rounded md:bg-transparent md:text-gray-700 md:p-0 dark:text-white md:dark:text-gray-500";
     const inactive_class = "block py-2 px-3 text-gray-500 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-black md:p-0 dark:text-white md:dark:hover:text-black dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent";
 
-    for (var j = 0; j < 2; j++) {
-      var inactive_elements = document.getElementsByClassName("inactive");
-      for (var i = 0; i < inactive_elements.length; i++) {
-        inactive_elements[i].className = inactive_class;
-      }
-    }
+    navbar_items = document.getElementsByClassName("test");
 
-    var active_element = document.getElementsByClassName("active");
-    for (var i = 0; i < active_element.length; i++) {
-      active_element[i].className = active_class;
-    }
+    for (var a=[], i=navbar_items.length; i;) a[--i] = navbar_items[i];
+    
+    console.log(navbar_items);
+    console.log(a);
+
+    a.forEach(function(elm) {
+      if (elm.classList.contains("active")) {
+        elm.className = active_class;
+      } else if (elm.classList.contains("inactive")) {
+        elm.className = inactive_class;
+      }
+    });
+
 </script>
