--- a/templates/base/contact/index.html
+++ b/templates/base/contact/index.html
@@ -3,7 +3,7 @@
 {% load custom_tags%}
 {% block title %}{{page_title}}{% endblock %}
 {% block content %}
-<div class="relative flex min-h-screen flex-col justify-center overflow-hidden pt-6 sm:pt-12">
+<div class="relative bg-gray-100 dark:bg-gray-800 flex min-h-screen flex-col justify-center overflow-hidden pt-6 sm:pt-12">
     <div class="relative bg-white px-6 pt-10 pb-8 shadow-2xl ring-1 ring-gray-900/5 sm:mx-auto sm:max-w-lg sm:rounded-lg dark:bg-gray-700 sm:px-10 mb-12">
       <div class="mx-auto max-w-md">
           <a class="justify-content-center grid grid-cols-1 place-items-center" href={% url 'base:index' %}>
