--- a/templates/base/home/base.html
+++ b/templates/base/home/base.html
@@ -13,7 +13,7 @@
     <link href={% static 'css/dist/styles.css' %}/>
     <title>{% block title %}{% endblock %} | {{ 'NAME'|get_setting }}</title>
 </head>
-<body class="bg-gray-100 dark:bg-gray-800 text-black dark:text-white">
+<body class="bg-white dark:bg-gray-900 text-black dark:text-white">
     {% include 'fragments/navbar.html' %}
     {% block content %}
     {% endblock %}
