--- a/templates/base/home/base.html
+++ b/templates/base/home/base.html
@@ -1,6 +1,7 @@
 {% load static tailwind_tags %}
 {% load static %}
 {% load custom_tags %}
+{% load alert_tags %}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -19,4 +20,4 @@
     {% endblock %}
     {% include 'fragments/footer.html' %}
 </body>
-</html> 
+</html>
