--- a/templates/fragments/navbar.html
+++ b/templates/fragments/navbar.html
@@ -27,6 +27,9 @@
         <li>
           <a href={% url 'base:form' %} class="block py-2 px-3 text-gray-500 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-black md:p-0 dark:text-white md:dark:hover:text-black dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Form</a>
         </li>
+        <li>
+          <a href={% url 'demo:demoindex' %} class="block py-2 px-3 text-gray-500 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-black md:p-0 dark:text-white md:dark:hover:text-black dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Demo</a>
+        </li>
       </ul>
     </div>
   </div>
@@ -46,6 +49,9 @@
       </li>
       <li>
         <a href={% url 'base:form' %} {% if request.resolver_match.url_name == 'form' %}class="test active"{% else %}class="test inactive"{% endif %}>Form</a>
+      </li>
+      <li>
+        <a href={% url 'demo:demoindex' %} {% if request.resolver_match.url_name == 'demoindex' %}class="test active"{% else %}class="test inactive"{% endif %}>Demo</a>
       </li>
     </ul>
   </div>
