--- a/templates/base/form/index.html
+++ b/templates/base/form/index.html
@@ -10,14 +10,34 @@
             {{'NAME'|get_setting}} is a web application for managing your clients, staff and business relationships.
         </h2>
         <p class="pl-24 pr-24">Hello World</p>
-        <form action="/your-name/" method="post">
+        <h3>profile created</h3>
+        <form id="post-form">
             {% csrf_token %}
             {% for field in form %}
-            <div>{{field.label}}</div><div class="text-black"><p>{{field}}</p></div><div class="text-black"></div>             
+            <div>{{field.label}}</div><div class="text-black">{{field}}</div>
             {% endfor %}
             <input type="submit" value="Submit">
         </form>
         <p>end forM</p>
     </div>
 </div>
+<script src={% static 'js/jquery.js' %}></script>
+<script type="text/javascript">
+    $(document).on('submit', '#post-form', function (e) {
+        e.preventDefault();
+        $.ajax({
+            type: 'POST',
+            url: "{% url 'accounts:create' %}",
+            data: {
+                first_name: $('#id_first_name').val(),
+                last_name: $('#id_last_name').val(),
+                password: $('#id_password').val(),
+                csrfmiddlewaretoken: $('input[name=csrfmiddlewaretoken]').val()
+            },
+            success: function (data) {
+                $('h3').html(data);
+            }
+        })
+    });
+</script>
 {% endblock %}
