final commit, trying to fix the notifaction part of thenavbar in main app, changed base demo

--- a/templates/demo/app/base.html
+++ b/templates/demo/app/base.html
@@ -17,9 +17,9 @@
 <body class="bg-gray-100 dark:bg-gray-900">
   <div class="bg-gray-100 dark:bg-gray-900">
     <!-- Navbar -->
-    {% include 'fragments/main_app/navbar.html' %}
+    {% include 'fragments/demo_app/navbar.html' %}
     <!-- Sidebar -->
-    {% include 'fragments/main_app/sidebar.html' %}
+    {% comment %} {% include 'fragments/demo_app/sidebar.html' %} {% endcomment %}
 
     <main class="p-4 md:ml-64 h-auto pt-20">
       {% block main_app_content %}{% endblock %}
