--- a/templates/fragments/demo_app/navbar.html
+++ b/templates/fragments/demo_app/navbar.html
@@ -104,7 +104,7 @@
         </button>
         <!-- Dropdown menu -->
         <div
-          class="static relative absolute fixed overflow-hidden z-50 my-4 max-w-sm text-base list-none bg-white rounded divide-y divide-gray-100 shadow-lg dark:divide-gray-600 dark:bg-gray-700 rounded-xl"
+          class="absolute md:xl:right-6 md:xl:top-6 overflow-hidden z-50 my-4 max-w-sm text-base list-none bg-white rounded divide-y divide-gray-100 shadow-lg dark:divide-gray-600 dark:bg-gray-700 rounded-xl"
           id="notification-dropdown"
         >
           <div
@@ -609,11 +609,11 @@
           <div class="py-3 px-4">
             <span
               class="block text-sm font-semibold text-gray-900 dark:text-white"
-              >Full Name</span
+              >Neil Sims</span
             >
             <span
               class="block text-sm text-gray-900 truncate dark:text-white"
-              >name@email.com</span
+              >name@flowbite.com</span
             >
           </div>
           <ul
