--- a/templates/fragments/demo_app/navbar.html
+++ b/templates/fragments/demo_app/navbar.html
@@ -105,7 +105,7 @@
         </button>
         <!-- Dropdown menu -->
         <div
-          class="absolute hidden top-14 right-6 md:xl:top-6 overflow-hidden z-50 my-4 max-w-sm text-base list-none bg-white rounded divide-y divide-gray-100 shadow-lg dark:divide-gray-600 dark:bg-gray-700 rounded-xl"
+        class="absolute hidden top-14 md:xl:top-6 overflow-hidden z-50 my-4 max-w-sm text-base list-none bg-white rounded divide-y divide-gray-100 shadow-lg dark:divide-gray-600 dark:bg-gray-700 rounded-xl"
           id="notification-dropdown"
         >
           <div
@@ -391,7 +391,7 @@
         </button>
         <!-- Dropdown menu -->
         <div
-          class="absolute top-12 right-4 md:xl:right-6 md:xl:top-6 overflow-hidden z-50 my-4 max-w-sm text-base list-none bg-white rounded divide-y divide-gray-100 shadow-lg dark:bg-gray-700 dark:divide-gray-600 rounded-xl"
+          class="absolute hidden top-12 right-4 md:xl:right-6 md:xl:top-6 overflow-hidden z-50 my-4 max-w-sm text-base list-none bg-white rounded divide-y divide-gray-100 shadow-lg dark:bg-gray-700 dark:divide-gray-600 rounded-xl"
           id="apps-dropdown"
         >
           <div
@@ -606,7 +606,7 @@
         </button>
         <!-- Dropdown menu -->
         <div
-          class="z-50 absolute right-6 top-12 md:xl:right-6 md:xl:top-6 my-4 w-56 text-base list-none bg-white rounded divide-y divide-gray-100 shadow dark:bg-gray-700 dark:divide-gray-600 rounded-xl"
+          class="z-50 hidden absolute right-6 top-12 md:xl:right-6 md:xl:top-6 my-4 w-56 text-base list-none bg-white rounded divide-y divide-gray-100 shadow dark:bg-gray-700 dark:divide-gray-600 rounded-xl"
           id="dropdown"
         >
           <div class="py-3 px-4">
