added scripts block to inheritable templates

--- a/templates/base/home/base.html
+++ b/templates/base/home/base.html
@@ -20,4 +20,8 @@
     {% endblock %}
     {% include 'fragments/footer.html' %}
 </body>
+    <span scripts>
+        {% block scripts%}
+        {% endblock %}
+    </span>
 </html>
