--- a/templates/base/form/index.html
+++ b/templates/base/form/index.html
@@ -22,6 +22,8 @@
         <p>end forM</p>
     </div>
 </div>
+{% endblock %}
+{% block scripts %}
 <script src={% static 'js/jquery.js' %}></script>
 <script type="text/javascript">
     $(document).on('submit', '#post-form', function (e) {
