--- a/templates/fragments/products/test_modal.html
+++ b/templates/fragments/products/test_modal.html
@@ -71,7 +71,7 @@
         $.ajax({
             type: 'post',
             headers: {'X-CSRFToken': $('input[name=csrfmiddlewaretoken]').val()},
-            url: "{% url 'products:create' %}",
+            url: "{% url 'main_app:products:create' %}",
             //mode: 'same-origin', // Do not send CSRF token to another domain.
             data: {
                 product_name: $('#name').val(),
