--- a/templates/base/home/base.html
+++ b/templates/base/home/base.html
@@ -16,9 +16,11 @@
 </head>
 <body class="bg-white dark:bg-gray-900 text-black dark:text-white">
     {% include 'fragments/navbar.html' %}
+    <div class="bg-gray-100 dark:bg-gray-900">
     {% block content %}
     {% endblock %}
     {% include 'fragments/footer.html' %}
+    </div>
 </body>
     <span scripts>
         {% block scripts%}
