--- a/templates/products/index.html
+++ b/templates/products/index.html
@@ -1,4 +1,4 @@
-{% extends "demo/app/base.html" %}
+{% extends "main_app/base.html" %}
 {% block title %}Demo{% endblock %}
 {% block main_app_content %}
 {% load custom_tags %}
@@ -29,7 +29,7 @@
       e.preventDefault();
       $.ajax({
           type: 'GET',
-          url: "{% url 'products:test' %}",
+          url: "{% url 'main_app:products:test' %}",
           headers: {'X-CSRFToken': $('input[name=csrfmiddlewaretoken]').val()},
           mode: 'same-origin', // Do not send CSRF token to another domain.
           data: {
