--- a/templates/fragments/main_app/sidebar.html
+++ b/templates/fragments/main_app/sidebar.html
@@ -254,6 +254,22 @@
               </svg>
             </button>
             <ul id="dropdown-authentication" class="hidden py-2 space-y-2">
+              {% if request.user.is_authenticated %}
+              <li>
+                <a
+                  href={% url 'user_management:change_password' %}
+                  class="flex items-center p-2 pl-11 w-full text-base font-medium text-gray-900 rounded-lg transition duration-75 group hover:bg-gray-100 dark:text-white dark:hover:bg-gray-700"
+                  >Change Password</a
+                >
+              </li>
+              <li>
+                <a
+                  href={% url 'user_management:logout' %}
+                  class="flex items-center p-2 pl-11 w-full text-base font-medium text-gray-900 rounded-lg transition duration-75 group hover:bg-gray-100 dark:text-white dark:hover:bg-gray-700"
+                  >Sign Out</a
+                >
+              </li>
+              {% else %}
               <li>
                 <a
                   href="#"
@@ -270,11 +286,16 @@
               </li>
               <li>
                 <a
-                  href="#"
+                  href="{% url 'user_management:forgot_password' %}"
                   class="flex items-center p-2 pl-11 w-full text-base font-medium text-gray-900 rounded-lg transition duration-75 group hover:bg-gray-100 dark:text-white dark:hover:bg-gray-700"
                   >Forgot Password</a
                 >
               </li>
+              <li>
+                <p>Tester</p>
+              </li>
+              {% endif %}
+
             </ul>
           </li>
         </ul>
