--- a/templates/fragments/demo_app/sidebar.html
+++ b/templates/fragments/demo_app/sidebar.html
@@ -167,7 +167,7 @@
             <ul id="dropdown-sales" class="hidden py-2 space-y-2">
               <li>
                 <a
-                  href={% url 'products:view' %}
+                  href={% url 'main_app:products:view' %}
                   class="flex items-center p-2 pl-11 w-full text-base font-medium text-gray-900 rounded-lg transition duration-75 group hover:bg-gray-100 dark:text-white dark:hover:bg-gray-700"
                   >Products</a
                 >
@@ -270,7 +270,7 @@
               </li>
               <li>
                 <a
-                  href="#"
+                  href="{% url 'user_management:forgot_password' %}"
                   class="flex items-center p-2 pl-11 w-full text-base font-medium text-gray-900 rounded-lg transition duration-75 group hover:bg-gray-100 dark:text-white dark:hover:bg-gray-700"
                   >Forgot Password</a
                 >
