--- a/templates/fragments/navbar.html
+++ b/templates/fragments/navbar.html
@@ -1,4 +1,11 @@
 {% load custom_tags %}
+<style> 
+  @media screen and (max-width: 600px) {
+    div.navbar-default {
+      display: none;
+    }
+  }
+</style>
 <nav class="bg-white border-gray-200 dark:bg-gray-900">
   <div class="max-w-screen-xl flex items-center justify-between mx-auto p-4">
     <a class="mr-2 ml-2" href={% url 'base:index' %}>
@@ -24,20 +31,35 @@
         <li>
           <a href={% url 'base:contact' %} class="block py-2 px-3 text-gray-500 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-black md:p-0 dark:text-white md:dark:hover:text-black dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Contact</a>
         </li>
+
+        {% if request.user.is_authenticated %}
+
         <li>
-          <a href={% url 'main_app:index' %} class="block py-2 px-3 text-gray-500 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-black md:p-0 dark:text-white md:dark:hover:text-black dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Demo</a>
+          <a href={% url 'main_app:index' %} class="block py-2 px-3 text-gray-500 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-black md:p-0 dark:text-white md:dark:hover:text-black dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">App</a>
         </li>
         <li>
-          <a href={% url 'base:login_root' %} class="block py-2 px-3 text-gray-500 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-black md:p-0 dark:text-white md:dark:hover:text-black dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Login</a>
+          <a href={% url 'user_management:logout' %} class="block py-2 px-3 text-gray-500 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-black md:p-0 dark:text-white md:dark:hover:text-black dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Logout</a>
+        </li>
+
+        {% else %}
+
+        <li>
+          <a href={% url 'demo:index' %} class="block py-2 px-3 text-gray-500 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-black md:p-0 dark:text-white md:dark:hover:text-black dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Demo</a>
         </li>
         <li>
-          <a href={% url 'base:signup' %} class="block py-2 px-3 text-gray-500 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-black md:p-0 dark:text-white md:dark:hover:text-black dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Signup</a>
+          <a href={% url 'user_management:login_root' %} class="block py-2 px-3 text-gray-500 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-black md:p-0 dark:text-white md:dark:hover:text-black dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Login</a>
         </li>
+        <li>
+          <a href={% url 'user_management:signup' %} class="block py-2 px-3 text-gray-500 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-black md:p-0 dark:text-white md:dark:hover:text-black dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Signup</a>
+        </li>
+
+        {% endif %}
+        
       </ul>
     </div>
   </div>
-  <div class="md:xl:hidden hidden w-full md:block md:w-auto" id="navbar-default">
-    <ul class="font-medium md:xl:hidden flex flex-col p-1 md:p-0 border border-gray-100 md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0 dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
+  <div class="md:xl:2xl:hidden hidden w-full md:block md:w-auto" id="navbar-default">
+    <ul class="font-medium flex flex-col p-1 md:p-0 border border-gray-100 md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0 dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
       <li>
         <a href={% url 'base:index' %} {% if request.resolver_match.url_name == 'index' %}class="test active"{% else %}class="test inactive"{% endif %} aria-current="page">Home</a>
       </li>
@@ -50,15 +72,29 @@
       <li>
         <a href={% url 'base:contact' %} {% if request.resolver_match.url_name == 'contact' %}class="test active"{% else %}class="test inactive"{% endif %}>Contact</a>
       </li>
+
+      {% if request.user.is_authenticated %}
+      
       <li>
-        <a href={% url 'main_app:index' %} {% if request.resolver_match.url_name == 'index' %}class="test active"{% else %}class="test inactive"{% endif %}>Demo</a>
+        <a href={% url 'main_app:index' %} {% if request.resolver_match.url_name == 'main_app' %}class="test active"{% else %}class="test inactive"{% endif %}>App</a>
       </li>
       <li>
-        <a href={% url 'base:login_root' %}>Login</a>
+        <a href={% url 'user_management:logout' %} class="test inactive">Logout</a>
+      </li>
+
+      {% else %}
+
+      <li>
+        <a href={% url 'demo:index' %} {% if request.resolver_match.url_name == 'demo' %}class="test active"{% else %}class="test inactive"{% endif %}>Demo</a>
       </li>
       <li>
-        <a href={% url 'base:signup' %}>Signup</a>
+        <a href={% url 'user_management:login_root' %} {% if request.resolver_match.url_name == 'login_root' %}class="test active"{% else %}class="test inactive"{% endif %}>Login</a>
       </li>
+      <li>
+        <a href={% url 'user_management:signup' %} {% if request.resolver_match.url_name == 'signup' %}class="test active"{% else %}class="test inactive"{% endif %}>Signup</a>
+      </li>
+
+      {% endif %}
     </ul>
   </div>
 </nav>
