Standardised the page layouts in programming, added extra pages

--- a/templates/base/pricing/index.html
+++ b/templates/base/pricing/index.html
@@ -1,8 +1,8 @@
-{% extends "base/home/base.html" %}
+{% extends "base/home/base_new.html" %}
 {% load static %}
 {% block title %}{{page_title}}{% endblock %}
 {% block content %}
-<div class="w-full h-screen bg-gray-100 dark:bg-gray-800">
+<div class="w-full h-screen">
     <div class="m-auto h-[90%] p-12 pb-0 grid  md:xl:grid-cols-3 md:xl:grid-rows-1 sm:grid-cols-1 sm:grid-rows-3 gap-12">
         <div class="col-span-1 bg-white dark:bg-gray-700 rounded-2xl shadow-xl p-2">
             <h1 class="text-xl md:text-3xl text-center border-b border-gray-300 dark:border-gray-500 pb-2 font-bold">Standard</h1>
