--- a/templates/main_app/invoice/index.html
+++ b/templates/main_app/invoice/index.html
@@ -1,5 +1,5 @@
 {% extends "main_app/base.html" %}
-{% block title %}Demo{% endblock %}
+{% block title %}{{ page_title }}{% endblock %}
 {% load custom_tags %}
 {% load static %}
 {% block main_app_content %}
