--- a/templates/user_management/login/root_login.html
+++ b/templates/user_management/login/root_login.html
@@ -1,12 +1,13 @@
-{% extends "base/home/base.html" %}
+{% extends "base/home/empty_base.html" %}
 {% load static %}
 {% load custom_tags%}
 {% block title %}{{page_title}}{% endblock %}
 {% block content %}
-<div class="relative bg-gray-100 dark:bg-gray-800 flex min-h-screen flex-col justify-center overflow-hidden pt-6 sm:pt-12">
     <div class="relative bg-white px-6 pt-10 pb-8 shadow-2xl ring-1 ring-gray-900/5 sm:mx-auto sm:max-w-lg sm:rounded-lg dark:bg-gray-700 sm:px-10 mb-12">
       <div class="mx-auto max-w-md">
-          <h1 class="text-5xl font-bold border-b text-center pb-6">Login</h1>
+        <a class="justify-content-center grid grid-cols-1 place-items-center mb-4" href={% url 'base:index' %}>
+            {{'fill-current hover:text-gray-500 ease-in-out duration-300 dark:text-white text-dark'|get_pyrl_logo}}
+        </a>
         <div class="divide-y divide-gray-300/50">
           <div class="space-y-6 pt-1 text-base leading-7 dark:text-white text-black">
             <p class="text-center">Log in to your Pyrl root account.</p>
@@ -34,7 +35,6 @@
           </div>
       </div>
     </div>
-  </div>
 {% endblock %}
 {% block scripts %}
     <script src={% static 'js/clear_element.js' %}></script>
