--- a/templates/base/about/index.html
+++ b/templates/base/about/index.html
@@ -1,9 +1,9 @@
-{% extends "base/home/base.html" %}
+{% extends "base/home/base_new.html" %}
 {% load static %}
 {% load custom_tags %}
 {% block title %}{{page_title}}{% endblock %}
 {% block content %}
-<div class="w-full h-screen bg-gray-100 dark:bg-gray-800">
+<div class="w-full h-screen">
     <div class="m-auto h-full p-4">
         <h1 class="border-b border-gray-200 pb-2 dark:border-gray-800 text-center text-5xl sm:text-4xl font-bold">Welcome to {{'NAME'|get_setting}}</h1>
         <h2 class="text-center text-xl font-semibold">
