--- a/templates/base/contact/index.html
+++ b/templates/base/contact/index.html
@@ -1,4 +1,4 @@
-{% extends "base/home/base.html" %}
+{% extends "base/home/empty_base.html" %}
 {% load static %}
 {% load custom_tags%}
 {% block title %}{{page_title}}{% endblock %}
