--- a/templates/base/home/empty_base.html
+++ b/templates/base/home/empty_base.html
@@ -12,18 +12,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link type="css" rel="stylesheet" href="/static/css/dist/styles.css"/>
     <link href={% static 'css/dist/styles.css' %}/>
-    <title>{% block title %}{% endblock %} | {{ 'NAME'|get_setting }}</title>
+    <title>{% block title %}{% endblock %} {{'DIVIDER'|get_setting }} {{ 'NAME'|get_setting }}</title>
 </head>
-<body class="bg-white dark:bg-gray-900 text-black dark:text-white">
-    {% include 'fragments/navbar.html' %}
-    <div class="bg-gray-100 dark:bg-gray-900">
+<body class="bg-gray-100 dark:bg-gray-800 text-black dark:text-white">
+    <div></div>
+    <a href="{% url 'base:index' %}" class="fixed left-4 top-4 z-50 text-gray-500 transition duration-300 ease-in-out hover:text-gray-800">Home...</a>
+    <div class="relative flex min-h-screen flex-col justify-center overflow-hidden">
         {% block content %}
         {% endblock %}
     </div>
-    {% include 'fragments/footer.html' %}
 </body>
-    <span scripts>
-        {% block scripts%}
-        {% endblock %}
-    </span>
+<span scripts>
+    {% block scripts%}
+    {% endblock %}
+</span>
 </html>
