--- a/templates/base/home/index.html
+++ b/templates/base/home/index.html
@@ -1,4 +1,4 @@
-{% extends "base/home/base.html" %}
+{% extends "base/home/base_new.html" %}
 {% load static %}
 {% load custom_tags%}
 {% block title %}{{page_title}}{% endblock %}
@@ -29,20 +29,19 @@
         <p class="text-center">All your needs, all your clients, all your network, secure and readily available.</p>
         <p class="text-center pb-2">Let {{'NAME'|get_setting}} handle it for you.</p>
     </div>
-    <h1 class="text-4xl text-center md:xl:text-5xl font-bold pb-4">Our core tenets</h1>
-    <div class="m-auto h-[90%] p-12 pt-0 flex grid md:xl:grid-cols-3 md:xl:grid-rows-1 gap-6 sm:grid-cols-1 sm:grid-rows-3">
-        <div class="col-span-1 p-2">
-            <h1 class="text-xl md:text-3xl text-center border-b border-gray-500 pb-2 font-bold">Reliability</h1>
-            <p>Here at {{'NAME'|get_setting}}, our mission is to provide the support to you and your team, to meet client expectations everytime. Utilising cloud-based distributed architecture, we are able to provide you with the best service at the lowest cost. Our team strives to maintain a high level of service quality, producing reliable and efficient solutions with minimal downtime.</p>
-        </div>
-        <div class="col-span-1 p-2">
-            <h1 class="text-xl md:text-3xl text-center border-b border-gray-500 pb-2 font-bold">Accountability</h1>
-            <p>Open and honest development is at the core of our design philosphy. Committed to providing a platform with full accountability, so you know exactly where and when your data is in use. Our service is built with this in mind, providing communication channels that are as transparent as you need, to meet the dynamic challenges of any individual team that may need our Client Management System.</p>
-        </div>
-        <div class="col-span-1 p-2">
-            <h1 class="text-xl md:text-3xl text-center border-b border-gray-500 pb-2 font-bold">Flexibility</h1>
-            <p>Only a few team members? Working as highly independent agents? Cooperating in a large-scale team? Our system provides you the platform to manage your clients in a diverse and customisable setup. The changing landscape of modern business requires a flexible and adaptable system, minimal downtime, maximum flexibility, open and honest accountability - all the time.</p>
-        </div>
+    <h1 class="text-4xl text-center md:xl:text-5xl font-bold pb-2">Our core tenets</h1>
+    <p class="mb-8 text-center text-xl">What do we value most at {{'NAME'|get_setting}}?</p>
+    <div>
+        <h1 class="text-3xl text-center border-b border-gray-500 pb-2 font-bold">Reliability</h1>
+        <p class="pt-2">Here at {{'NAME'|get_setting}}, our mission is to provide the support to you and your team, to meet client expectations everytime. Utilising cloud-based distributed architecture, we are able to provide you with the best service at the lowest cost. Our team strives to maintain a high level of service quality, producing reliable and efficient solutions with minimal downtime.</p>
+    </div>
+    <div>
+        <h1 class="text-3xl text-center border-b border-gray-500 pb-2 font-bold">Accountability</h1>
+        <p class="pt-2">Open and honest development is at the core of our design philosphy. Committed to providing a platform with full accountability, so you know exactly where and when your data is in use. Our service is built with this in mind, providing communication channels that are as transparent as you need, to meet the dynamic challenges of any individual team that may need our Client Management System.</p>
+    </div>
+    <div>
+        <h1 class="text-3xl text-center border-b border-gray-500 pb-2 font-bold">Flexibility</h1>
+        <p class="pt-2">Only a few team members? Working as highly independent agents? Cooperating in a large-scale team? Our system provides you the platform to manage your clients in a diverse and customisable setup. The changing landscape of modern business requires a flexible and adaptable system, minimal downtime, maximum flexibility, open and honest accountability - all the time.</p>
     </div>
 </div>
 {% endblock %}
