--- a/templates/demo/app/index.html
+++ b/templates/demo/app/index.html
@@ -1,5 +1,5 @@
 {% extends "demo/app/base.html" %}
-{% block title %}Demo{% endblock %}
+{% block title %}{{ page_title }}{% endblock %}
 {% block main_app_content %}
   <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-4 mb-4">
     <div
