--- a/templates/fragments/main_app/sidebar.html
+++ b/templates/fragments/main_app/sidebar.html
@@ -48,7 +48,7 @@
           </li>
           <li>
             <a
-              href="#"
+              href="{% url 'main_app:index' %}"
               class="flex items-center p-2 text-base font-medium text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group"
             >
               <svg
