--- a/templates/main_app/base.html
+++ b/templates/main_app/base.html
@@ -12,7 +12,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link type="css" rel="stylesheet" href="/static/css/dist/styles.css"/>
     <link href={% static 'css/dist/styles.css' %}/>
-    <title>{% block title %}{% endblock %} | {{ 'NAME'|get_setting }}</title>
+    <title>{% block title %}{% endblock %} {{ 'DIVIDER' | get_setting }} {{ 'NAME' | get_setting }}</title>
 </head>
 <body class="bg-gray-100 dark:bg-gray-900">
   <div class="bg-gray-100 dark:bg-gray-900">
